<resources>
    <string name="app_name">My Application</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="edit_hint_username">请输入用户名</string>
    <string name="edit_hint_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="text_network">网络不可用</string>
    <string name="verify_code">验证码</string>
    <string name="edit_hint_verifycode">请输入你的验证码</string>
    <string name="icon_message">消息</string>
    <string name="contacts_icon">联系人</string>
    <string name="news_icon">看点</string>
    <string name="phoneNumber">请输入你的联系方式</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
