<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/loginbg">
        <TextView
            android:id="@+id/textview_network_tip"
            android:gravity="center_horizontal"
            android:textColor="@color/network_tip_color"
            android:background="@color/network_tip_background"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/text_network"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="70dp">
            <com.example.lenovo.myapplication.CircleImageView
                android:id="@+id/mainactivity_avator"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/bigtemp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/edit_hint_username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="@string/password"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/edit_pass"
                android:textColorHint="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/edit_hint_password"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textview_register"
                android:layout_alignBottom="@id/login"
                android:text="@string/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/appColor_register" />
            <Button
                android:id="@+id/login"
                android:background="#ffffff"
                android:layout_marginLeft="70dp"
                android:text="@string/btn_login"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>