<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageUi">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/colorPrimary"
            android:gravity="center">
            <com.example.lenovo.myapplication.CircleImageView
                android:id="@+id/title_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/tempavator"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:text="Message"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contents"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="75dp"
            android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/bottom_color"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:id="@+id/message_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/message_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/message_b"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_message"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/font_color_icon_message"/>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/contacts_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/icon_contacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/contact_b"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contacts_icon"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/font_color_icon_message"/>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/news_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/icon_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/news_b"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news_icon"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/font_color_icon_message"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>